--- a/OrchardSite/OrchardSite.csproj
+++ b/OrchardSite/OrchardSite.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\img\favicon.ico" />
   </ItemGroup>
 
 </Project>
